syntax = "proto3";
package api;
option go_package = "./pb";

import "common.proto";
import "entity_entry.proto";
import "entity_project.proto";

service AdminEntryService {
    rpc GetAll (common.Pager) returns (entity.EntryList);
    rpc GetAllByProject (entity.ProjectIDWithPager) returns (entity.EntryList);
    rpc Get (entity.EntryID) returns (entity.Entry);
    rpc GetTotalCount (common.Empty) returns (common.Count);
    rpc GetCountByProject (entity.ProjectID) returns (common.Count);
}